# shared_audio_core

./: .gitignore  CMakeLists.txt
bindings/electron/: CMakeLists.txt  binding.gyp  package.json
bindings/electron/src/: node_audio_wrapper.cpp
examples/: CMakeLists.txt  hardware_test.cpp  performance_test.cpp  test_shared_audio.cpp
include/core/: lock_free_fifo.h
include/hardware/: asio_header_interface.h  hardware_detector.h
include/shared_audio/: shared_audio_core.h
include/show_control/: crossfade_engine.h  cue_audio_manager.h
src/core/: shared_audio_core.cpp
src/hardware/: hardware_detector.cpp
src/show_control/: crossfade_engine.cpp  cue_audio_manager.cpp
tests/: CMakeLists.txt  manual_test_suite.cpp
